refactor from swagger into openAPI

--- a/todo.txt
+++ b/todo.txt
@@ -3,4 +3,4 @@ TODOs:
 - check runtime consistency with null/undefined
 - fix bad error messages: "name must be a `string` type, but the final value was: `null`.\n If \"null\" is intended as an empty value be sure to mark the schema as `.nullable()`"
 - number | string
-- `any` type in the swagger docs is broken
+- add tests for object oneOf
