add optional object keys

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
-TODOs:
-- add more tests
-- check runtime consistency with null/undefined
-- fix bad error messages: "name must be a `string` type, but the final value was: `null`.\n If \"null\" is intended as an empty value be sure to mark the schema as `.nullable()`"
-- number | string
-- add tests for object oneOf
 
-- add valid tAny 
+missing validations for
+- files
+- http headers
+- etc...
+- > with custom error messages
