add infer schema type for encoders

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@ TODO:
 - with custom error messages
 - add async validator into encoders 
 - add unit tests for res.tSend
+- resolve how to parse nullable query parameters...
