play around with T.transform type

--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,6 @@ TODO:
 - add async validator into encoders 
 - add unit tests for res.tSend
 - resolve how to parse nullable query parameters...
+- will transform types be used? does it make sense to make the codebase so complex for them?
+- document difference between T.nullableTransform & T.nullable and how is required=false working for transform data type...
+- document how to use nullable types withing transformations... and how to use T.any instead of null_ prefix
