optimise oneofs for a little bit

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,4 @@ TODO:
 - will transform types be used? does it make sense to make the codebase so complex for them?
 - document difference between T.nullableTransform & T.nullable and how is required=false working for transform data type...
 - document how to use nullable types withing transformations... and how to use T.any instead of null_ prefix
+- nested oneOfs with async validations run exponentially duplicated sync validate => so its CPU slow code
